# score-server

./: .gitignore  Cargo.toml  README.md  build.sbt
app/controllers/: Application.scala
app/models/: Log.scala
app/views/: BootstrapHelper.scala  admin.scala.html  bootstrapField.scala.html  index.scala.html  page.scala.html  style.scala.html
conf/: application.conf  routes
conf/evolutions/default/: 1.sql
project/: build.properties  plugins.sbt
public/stylesheets/: style.css
src/: main.rs
