[package]
name = "score-server"
version = "0.1.0"
authors = ["index30 <realthingshakes25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# from: https://github.com/seanmonstar/warp
tokio = {version = "0.2", features = ["macros"]}
warp = "0.2"